--- a/index.html
+++ b/index.html
@@ -422,11 +422,10 @@
 				<div class="row">
 					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
 						<div class="single-member">
-							<div class="thumb relative" style="background: url(img/t1.jpg);">
+							<div class="thumb relative" style="background: url(img/Yisus.png);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
 										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
 										<a href="#"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
@@ -436,137 +435,16 @@
 							</div>
 							<div class="desc text-center">
 								<h5 class="text-uppercase"><a href="#">Jesus Medina</a></h5>
-								<p>Managing Director (Sales)</p>
+								<p>Team Manager</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
 						<div class="single-member">
-							<div class="thumb relative" style="background: url(img/t2.jpg);">
+							<div class="thumb relative" style="background: url(img/Yissel.png);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
 										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
-									</div>
-									<div class="line"></div>
-									<div class="social d-flex align-items-center justify-content-center">
-									</div>
-								</div>
-							</div>
-							<div class="desc text-center">
-								<h5 class="text-uppercase"><a href="#">Eli Taboada Rojas</a></h5>
-								<p>Creative Art Director</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-						<div class="single-member">
-							<div class="thumb relative" style="background: url(img/t3.jpg);">
-								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
-									</div>
-									<div class="line"></div>
-									<div class="social d-flex align-items-center justify-content-center">
-									</div>
-								</div>
-							</div>
-							<div class="desc text-center">
-								<h5 class="text-uppercase"><a href="#">Fernando Perez Contreras</a></h5>
-								<p>Senior Core Developer</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-						<div class="single-member">
-							<div class="thumb relative" style="background: url(img/t4.jpg);">
-								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
-									</div>
-									<div class="line"></div>
-									<div class="social d-flex align-items-center justify-content-center">
-									</div>
-								</div>
-							</div>
-							<div class="desc text-center">
-								<h5 class="text-uppercase"><a href="#">Katia Olmedo</a></h5>
-								<p>Creative Content Developer</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-						<div class="single-member">
-							<div class="thumb relative" style="background: url(img/t1.jpg);">
-								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
-									</div>
-									<div class="line"></div>
-									<div class="social d-flex align-items-center justify-content-center">
-									</div>
-								</div>
-							</div>
-							<div class="desc text-center">
-								<h5 class="text-uppercase"><a href="#">Saulo Colorado Vasquez</a></h5>
-								<p>Managing Director (Sales)</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-						<div class="single-member">
-							<div class="thumb relative" style="background: url(img/t2.jpg);">
-								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
-									</div>
-									<div class="line"></div>
-									<div class="social d-flex align-items-center justify-content-center">
-									</div>
-								</div>
-							</div>
-							<div class="desc text-center">
-								<h5 class="text-uppercase"><a href="#">Ronaldo Rodriguez Gamboa</a></h5>
-								<p>Creative Art Director</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-						<div class="single-member">
-							<div class="thumb relative" style="background: url(img/t3.jpg);">
-								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
-									</div>
-									<div class="line"></div>
-									<div class="social d-flex align-items-center justify-content-center">
-									</div>
-								</div>
-							</div>
-							<div class="desc text-center">
-								<h5 class="text-uppercase"><a href="#">Saul Montero</a></h5>
-								<p>Senior Core Developer</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-						<div class="single-member">
-							<div class="thumb relative" style="background: url(img/t4.jpg);">
-								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
-									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
 										<a href="#"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
@@ -576,17 +454,16 @@
 							</div>
 							<div class="desc text-center">
 								<h5 class="text-uppercase"><a href="#">Yissel Marín</a></h5>
-								<p>Creative Content Developer</p>
+								<p>Design Leadership</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
 						<div class="single-member">
-							<div class="thumb relative" style="background: url(img/t1.jpg);">
+							<div class="thumb relative" style="background: url(img/Eli.png);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
 										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
 										<a href="#"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
@@ -595,18 +472,17 @@
 								</div>
 							</div>
 							<div class="desc text-center">
-								<h5 class="text-uppercase"><a href="#">Cesar</a></h5>
-								<p>Managing Director (Sales)</p>
+								<h5 class="text-uppercase"><a href="#">Elí Taboada</a></h5>
+								<p>Development Teach Lead</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
 						<div class="single-member">
-							<div class="thumb relative" style="background: url(img/t2.jpg);">
+							<div class="thumb relative" style="background: url(img/Ron.pnG);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
 										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
 										<a href="#"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
@@ -615,18 +491,17 @@
 								</div>
 							</div>
 							<div class="desc text-center">
-								<h5 class="text-uppercase"><a href="#">Jorge</a></h5>
-								<p>Creative Art Director</p>
+								<h5 class="text-uppercase"><a href="#">Ronaldo Rodriguez</a></h5>
+								<p>Developer</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
 						<div class="single-member">
-							<div class="thumb relative" style="background: url(img/t3.jpg);">
+							<div class="thumb relative" style="background: url(img/Fer.png);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
 										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
 										<a href="#"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
@@ -635,38 +510,17 @@
 								</div>
 							</div>
 							<div class="desc text-center">
-								<h5 class="text-uppercase"><a href="#">Rafael</a></h5>
-								<p>Senior Core Developer</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
-						<div class="single-member extra">
-							<div class="thumb relative" style="background: url(img/t2.jpg);">
-								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">>
-									<div class="social d-flex align-items-center justify-content-center">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
-									</div>
-									<div class="line"></div>
-									<div class="social d-flex align-items-center justify-content-center">
-									</div>
-								</div>
-							</div>
-							<div class="desc text-center">
-								<h5 class="text-uppercase"><a href="#">Luis</a></h5>
-								<p>Creative Content Developer</p>
+								<h5 class="text-uppercase"><a href="#">Fernando Contreras</a></h5>
+								<p>DevOps TechLead</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
 						<div class="single-member">
-							<div class="thumb relative" style="background: url(img/t1.jpg);">
+							<div class="thumb relative" style="background: url(img/Katia.png);">
 								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
 									<div class="social d-flex align-items-center justify-content-center">
 										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
 										<a href="#"><i class="fa fa-linkedin"></i></a>
 									</div>
 									<div class="line"></div>
@@ -675,8 +529,103 @@
 								</div>
 							</div>
 							<div class="desc text-center">
-								<h5 class="text-uppercase"><a href="#">Marco Antonio Hernández Salas</a></h5>
-								<p>Managing Director (Sales)</p>
+								<h5 class="text-uppercase"><a href="#">Katia Olmedo</a></h5>
+								<p>Scrum Master and Dev</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
+						<div class="single-member">
+							<div class="thumb relative" style="background: url(img/Marco.png);">
+								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
+									<div class="social d-flex align-items-center justify-content-center">
+										<a href="#"><i class="fa fa-facebook"></i></a>
+										<a href="#"><i class="fa fa-linkedin"></i></a>
+									</div>
+									<div class="line"></div>
+									<div class="social d-flex align-items-center justify-content-center">
+									</div>
+								</div>
+							</div>
+							<div class="desc text-center">
+								<h5 class="text-uppercase"><a href="#">Marco Hernández</a></h5>
+								<p>Developer Backend Specialist</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
+						<div class="single-member">
+							<div class="thumb relative" style="background: url(img/Saulo.png);">
+								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
+									<div class="social d-flex align-items-center justify-content-center">
+										<a href="#"><i class="fa fa-facebook"></i></a>
+										<a href="#"><i class="fa fa-linkedin"></i></a>
+									</div>
+									<div class="line"></div>
+									<div class="social d-flex align-items-center justify-content-center">
+									</div>
+								</div>
+							</div>
+							<div class="desc text-center">
+								<h5 class="text-uppercase"><a href="#">Saulo Colorado</a></h5>
+								<p>DevOps Specialist</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
+						<div class="single-member">
+							<div class="thumb relative" style="background: url(img/Rafa.jpg);">
+								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
+									<div class="social d-flex align-items-center justify-content-center">
+										<a href="#"><i class="fa fa-facebook"></i></a>
+										<a href="#"><i class="fa fa-linkedin"></i></a>
+									</div>
+									<div class="line"></div>
+									<div class="social d-flex align-items-center justify-content-center">
+									</div>
+								</div>
+							</div>
+							<div class="desc text-center">
+								<h5 class="text-uppercase"><a href="#">Rafael Fernandez</a></h5>
+								<p>Developer Front End Specialist</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
+						<div class="single-member">
+							<div class="thumb relative" style="background: url(img/Cesar.jpg);">
+								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
+									<div class="social d-flex align-items-center justify-content-center">
+										<a href="#"><i class="fa fa-facebook"></i></a>
+										<a href="#"><i class="fa fa-linkedin"></i></a>
+									</div>
+									<div class="line"></div>
+									<div class="social d-flex align-items-center justify-content-center">
+									</div>
+								</div>
+							</div>
+							<div class="desc text-center">
+								<h5 class="text-uppercase"><a href="#">Cesar Chavarria</a></h5>
+								<p>Sr Archited</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 effect">
+						<div class="single-member">
+							<div class="thumb relative" style="background: url(img/Saul.jpg);">
+								<div class="overlay overlay-member d-flex flex-column justify-content-end align-items-center">
+									<div class="social d-flex align-items-center justify-content-center">
+										<a href="#"><i class="fa fa-facebook"></i></a>
+										<a href="#"><i class="fa fa-linkedin"></i></a>
+									</div>
+									<div class="line"></div>
+									<div class="social d-flex align-items-center justify-content-center">
+									</div>
+								</div>
+							</div>
+							<div class="desc text-center">
+								<h5 class="text-uppercase"><a href="#">Saul Montero</a></h5>
+								<p>Teach Lead</p>
 							</div>
 						</div>
 					</div>
